--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,7 +33,8 @@
             android:id="@+id/imageView2"
             android:layout_width="297dp"
             android:layout_height="165dp"
-            app:srcCompat="@drawable/ic_welcom_logo" />
+            app:srcCompat="@drawable/ic_welcom_logo"
+            tools:ignore="VectorDrawableCompat" />
 
         <TextView
             android:layout_width="wrap_content"
