Adding the home page
adding the home page optimizing the card list and the home page to be responsive to any android device

--- a/app/src/main/res/layout/show_travils.xml
+++ b/app/src/main/res/layout/show_travils.xml
@@ -17,6 +17,6 @@
         android:layout_marginTop="20dp"
         android:layout_marginRight="15dp"
         android:layout_gravity="center"
-
+        tools:listitem="@layout/activity_travil_item"
         app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
