--- a/app/src/main/res/layout/activity_travil_item.xml
+++ b/app/src/main/res/layout/activity_travil_item.xml
@@ -7,104 +7,102 @@
     android:layout_marginBottom="15sp"
 
 
-    android:background="@drawable/travil_item_rad">
+    >
 
-    <LinearLayout
-        android:id="@+id/linearLayout4"
-        android:layout_width="wrap_content"
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="left"
-        android:orientation="horizontal"
-
+        android:foregroundGravity="center"
+        app:cardBackgroundColor="@color/highlite"
+        app:cardCornerRadius="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/travel_img_id"
-            android:layout_width="130dp"
+            <LinearLayout
+                android:id="@+id/linearLayout6"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="12dp"
+                android:orientation="horizontal">
 
-            android:layout_height="140dp"
-            app:srcCompat="@drawable/ic_bus_50"
-            tools:ignore="VectorDrawableCompat" />
+                <ImageView
+                    android:id="@+id/travel_img_id"
+                    android:layout_width="100dp"
 
+                    android:layout_height="100dp"
+                    app:srcCompat="@drawable/ic_bus_50"
+                    tools:ignore="VectorDrawableCompat" />
 
-    </LinearLayout>
+                <TextView
+                    android:id="@+id/fromtextid"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:text="egy"
+                    android:textColor="@color/background"
+                    android:textSize="20sp" />
 
-    <LinearLayout
-        android:id="@+id/linearLayout5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_marginLeft="-120dp"
-        android:orientation="vertical"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/linearLayout4"
-        app:layout_constraintTop_toTopOf="parent">
+                <TextView
+                    android:id="@+id/textarrow"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:layout_marginLeft="10dp"
+                    android:text="->"
+                    android:textColor="@color/background"
+                    android:textSize="20sp" />
 
-        <TextView
-            android:id="@+id/fromtextid"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="egy"
-            android:textColor="@color/background"
-            android:textSize="20sp" />
-        <TextView
-            android:id="@+id/pricetextid"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Price"
-            android:layout_marginTop="10dp"
-            android:textColor="@color/background"
-            android:textSize="20sp" />
-        <TextView
-            android:id="@+id/timetextid"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Time"
-            android:textColor="@color/background"
-            android:layout_marginTop="10dp"
-            android:textSize="20sp" />
-    </LinearLayout>
+                <TextView
+                    android:id="@+id/totextid"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:layout_marginLeft="20dp"
 
+                    android:text="TO"
+                    android:textColor="@color/background"
+                    android:textSize="20sp" />
 
-    <LinearLayout
-        android:id="@+id/linearLayout6"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+            </LinearLayout>
 
-        android:layout_marginTop="20dp"
+            <LinearLayout
+                android:id="@+id/linearLayout5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="150dp"
+                android:layout_marginTop="-60dp"
+                android:orientation="vertical">
 
-        android:orientation="horizontal"
-        app:layout_constraintEnd_toEndOf="parent"
+                <TextView
+                    android:id="@+id/pricetextid"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:text="Price"
+                    android:textColor="@color/background"
+                    android:textSize="20sp" />
 
-        app:layout_constraintStart_toEndOf="@+id/linearLayout5"
-        app:layout_constraintTop_toTopOf="parent">
+                <TextView
+                    android:id="@+id/timetextid"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:text="Time"
+                    android:textColor="@color/background"
+                    android:textSize="20sp" />
 
+            </LinearLayout>
 
-        <TextView
-            android:id="@+id/textarrow"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:text="->"
-            android:textColor="@color/background"
-            android:textSize="20sp" />
+        </LinearLayout>
 
-        <TextView
-            android:id="@+id/totextid"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:text="TO"
-
-            android:textColor="@color/background"
-            android:textSize="20sp" />
-
-
-    </LinearLayout>
-
-
+    </androidx.cardview.widget.CardView>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
