--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -43,7 +43,9 @@
             android:hint="Name"
             android:inputType="textPersonName"
             android:textColor="@color/white"
-            android:textColorHint="@color/white" />
+            android:textColorHighlight="@color/highlite"
+            android:textColorHint="@color/white"
+            android:textColorLink="@color/highlite" />
 
         <EditText
             android:id="@+id/email_upup"
@@ -55,7 +57,10 @@
             android:ems="10"
             android:hint="Email"
             android:inputType="textEmailAddress"
-            android:textColorHint="@color/white" />
+            android:textColor="@color/white"
+            android:textColorHighlight="@color/highlite"
+            android:textColorHint="@color/white"
+            android:textColorLink="@color/highlite" />
 
         <EditText
             android:id="@+id/phone_input"
@@ -67,7 +72,10 @@
             android:ems="10"
             android:hint="Phone"
             android:inputType="phone"
-            android:textColorHint="@color/white" />
+            android:textColor="@color/white"
+            android:textColorHighlight="@color/highlite"
+            android:textColorHint="@color/white"
+            android:textColorLink="@color/highlite" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -103,7 +111,9 @@
                 android:hint="Password"
                 android:inputType="textPassword"
                 android:textColor="@color/white"
+                android:textColorHighlight="@color/highlite"
                 android:textColorHint="@color/white"
+                android:textColorLink="@color/highlite"
                 android:textSize="18sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -130,7 +140,10 @@
                 android:ems="10"
                 android:hint="conferm password"
                 android:inputType="textPassword"
+                android:textColor="@color/white"
+                android:textColorHighlight="@color/highlite"
                 android:textColorHint="@color/white"
+                android:textColorLink="@color/highlite"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
