--- a/app/src/main/res/layout/activity_travil_item.xml
+++ b/app/src/main/res/layout/activity_travil_item.xml
@@ -47,17 +47,15 @@
                     android:layout_margin="10dp"
                     android:text="egy"
                     android:textColor="@color/background"
-                    android:textSize="20sp" />
+                    android:textSize="18sp" />
 
-                <TextView
-                    android:id="@+id/textarrow"
+                <ImageView
+                    android:id="@+id/imageView3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="10dp"
-                    android:layout_marginLeft="10dp"
-                    android:text="->"
-                    android:textColor="@color/background"
-                    android:textSize="20sp" />
+                    android:layout_weight="1"
+                    app:srcCompat="@drawable/ic_east_arrow" />
 
                 <TextView
                     android:id="@+id/totextid"
@@ -68,7 +66,7 @@
 
                     android:text="TO"
                     android:textColor="@color/background"
-                    android:textSize="20sp" />
+                    android:textSize="18sp" />
 
             </LinearLayout>
 
@@ -87,7 +85,7 @@
                     android:layout_marginTop="10dp"
                     android:text="Price"
                     android:textColor="@color/background"
-                    android:textSize="20sp" />
+                    android:textSize="18sp" />
 
                 <TextView
                     android:id="@+id/timetextid"
@@ -96,7 +94,7 @@
                     android:layout_marginTop="10dp"
                     android:text="Time"
                     android:textColor="@color/background"
-                    android:textSize="20sp" />
+                    android:textSize="18sp" />
 
             </LinearLayout>
 
