--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,4 +13,8 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+    <style name="Second_Theme" parent="Theme.AppCompat.Light.DarkActionBar">
+        <item name="colorPrimary">#40cd7d</item>
+        <item name="titleTextColor">#242846</item>
+    </style>
 </resources>
