--- a/app/src/main/res/menu/menu1.xml
+++ b/app/src/main/res/menu/menu1.xml
@@ -1,15 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-<item android:id="@+id/item1"
-      android:title="Profile"
-    app:showAsAction="never"/>
-    <item android:id="@+id/item2"
-        android:title="About Us"
-        app:showAsAction="never"/>
-    <item android:id="@+id/item3"
-        android:title="Log Out"
-        app:showAsAction="never">
-    </item>
+<item
+    android:id="@+id/action"
+    android:icon="@drawable/ic_menu"
+    app:showAsAction="ifRoom">
+    <menu>
+        <item
+            android:id="@+id/item1"
+            android:title="Profile"
+            android:icon="@drawable/ic_baseline_account_circle_24"
+            app:showAsAction="always"/>
+        <item android:id="@+id/item2"
+            android:title="About Us"
+            android:icon="@drawable/ic_baseline_supervised_user_circle_24"
+            app:showAsAction="always"/>
+        <item android:id="@+id/item3"
+            android:title="Log Out"
+            android:icon="@drawable/ic_baseline_exit_to_app_24"
+            app:showAsAction="always"/>
+
+    </menu>
+</item>
 
 </menu>
