--- a/app/src/main/res/layout/activity_destination.xml
+++ b/app/src/main/res/layout/activity_destination.xml
@@ -110,7 +110,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
-        android:text="Where are you go ?"
+        android:text="Where are you going?"
         android:textColor="#FFFFFF"
         android:textSize="24dp"
         app:layout_constraintEnd_toEndOf="parent"
