--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="0dp"
             android:layout_marginTop="0dp"
-            android:text="Welcom to"
+            android:text="Welcome to"
             android:textColor="#FFFFFF"
             android:textSize="18sp" />
 
