--- a/app/src/main/res/layout/activity_destination.xml
+++ b/app/src/main/res/layout/activity_destination.xml
@@ -9,10 +9,12 @@
 
     <LinearLayout
         android:id="@+id/linearLayout7"
-        android:layout_width="412dp"
-        android:layout_height="140dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
@@ -20,20 +22,32 @@
             android:layout_width="411dp"
             android:layout_height="137dp"
             app:srcCompat="@drawable/ic_out_icon" />
+
+        <TextView
+            android:id="@+id/textView10"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:text="Where are you going?"
+            android:textColor="#FFFFFF"
+            android:textSize="24dp" />
     </LinearLayout>
 
     <LinearLayout
         android:id="@+id/linearLayout6"
-        android:layout_width="402dp"
-        android:layout_height="226dp"
-        android:gravity="center_horizontal|center_vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="36dp"
         android:orientation="vertical"
-        app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
-        app:layout_constraintStart_toStartOf="parent">
+        android:padding="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout7">
 
         <TextView
             android:id="@+id/textView_from"
-            android:layout_width="343dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="From"
             android:textColor="#FFFFFF"
@@ -41,7 +55,7 @@
 
         <Spinner
             android:id="@+id/spinner_From"
-            android:layout_width="350dp"
+            android:layout_width="match_parent"
             android:layout_height="52dp"
             android:background="@drawable/sh_text_rad"
             android:entries="@array/Destination"
@@ -50,7 +64,7 @@
 
         <TextView
             android:id="@+id/textView_to"
-            android:layout_width="345dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="To"
             android:textColor="#FFFFFF"
@@ -58,7 +72,7 @@
 
         <Spinner
             android:id="@+id/spinner_To"
-            android:layout_width="350dp"
+            android:layout_width="match_parent"
             android:layout_height="52dp"
             android:background="@drawable/sh_text_rad"
             android:entries="@array/Destination"
@@ -68,18 +82,19 @@
 
     <LinearLayout
         android:id="@+id/linearLayout5"
-        android:layout_width="415dp"
-        android:layout_height="195dp"
-        android:layout_marginEnd="7dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="48dp"
         android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:padding="20dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.125"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout6">
 
         <Button
             android:id="@+id/btn_MyTrip"
-            android:layout_width="375dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:background="@drawable/sh_btn_rad"
@@ -90,7 +105,7 @@
 
         <Button
             android:id="@+id/btn_AllTrips"
-            android:layout_width="375dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:background="@drawable/sh_btn_rad"
@@ -99,18 +114,5 @@
             android:textSize="18sp"
             app:backgroundTint="@color/highlite" />
     </LinearLayout>
-
-    <TextView
-        android:id="@+id/textView10"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:text="Where are you going?"
-        android:textColor="#FFFFFF"
-        android:textSize="24dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout7" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
