--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -129,17 +129,34 @@
             android:textColorHint="@color/white"
             android:textColorLink="@color/highlite" />
 
-        <Button
-            android:id="@+id/home_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:background="@drawable/sh_btn_rad"
-            android:padding="10dp"
-            android:text="home"
-            android:textColor="@color/background"
-            android:textSize="18sp"
-            app:backgroundTint="@color/highlite" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:layout_weight="1"
+                android:background="@drawable/travil_item_rad"
+                android:text="Hestory"
+                android:textColor="@color/background" />
+
+            <Button
+                android:id="@+id/home_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:background="@drawable/sh_btn_rad"
+                android:padding="10dp"
+                android:text="home"
+                android:textColor="@color/background"
+                android:textSize="18sp"
+                app:backgroundTint="@color/highlite" />
+        </LinearLayout>
 
 
     </LinearLayout>
