--- a/app/src/main/res/layout/activity_trip_details.xml
+++ b/app/src/main/res/layout/activity_trip_details.xml
@@ -8,37 +8,36 @@
     tools:context=".Trip_Details">
 
     <LinearLayout
-        android:layout_width="409dp"
-        android:layout_height="672dp"
-        android:layout_marginStart="1dp"
-        android:layout_marginEnd="1dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
+        android:padding="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="58dp">
+        app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginBottom="450dp"
+            android:layout_height="wrap_content"
             android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/Transport_id"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="200dp"
+                android:layout_height="200dp"
                 android:layout_marginEnd="0dp"
                 android:layout_weight="1"
                 app:srcCompat="@drawable/ic_bus_50" />
 
             <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:gravity="center"
                 android:orientation="vertical">
 
                 <LinearLayout
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
                     android:orientation="horizontal">
@@ -49,7 +48,7 @@
                         android:layout_height="wrap_content"
                         android:text="From :"
                         android:textColor="@color/highlite"
-                        android:textSize="30sp" />
+                        android:textSize="24sp" />
 
                     <TextView
                         android:id="@+id/tv_from"
@@ -59,11 +58,11 @@
                         android:gravity="center"
                         android:text="Netherlands"
                         android:textColor="@color/highlite"
-                        android:textSize="20sp" />
+                        android:textSize="24sp " />
                 </LinearLayout>
 
                 <LinearLayout
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
                     android:orientation="horizontal">
@@ -74,7 +73,7 @@
                         android:layout_height="wrap_content"
                         android:text="    To :"
                         android:textColor="@color/highlite"
-                        android:textSize="30sp" />
+                        android:textSize="24sp" />
 
                     <TextView
                         android:id="@+id/tv_to"
@@ -84,11 +83,11 @@
                         android:gravity="center"
                         android:text="Netherlands"
                         android:textColor="@color/highlite"
-                        android:textSize="20sp" />
+                        android:textSize="24sp" />
                 </LinearLayout>
 
                 <LinearLayout
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
                     android:orientation="horizontal">
@@ -99,7 +98,7 @@
                         android:layout_height="wrap_content"
                         android:text="Price :"
                         android:textColor="@color/highlite"
-                        android:textSize="30sp" />
+                        android:textSize="24sp" />
 
                     <TextView
                         android:id="@+id/tv_price"
@@ -113,7 +112,7 @@
                 </LinearLayout>
 
                 <LinearLayout
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
                     android:orientation="horizontal">
@@ -124,7 +123,7 @@
                         android:layout_height="wrap_content"
                         android:text="Time :"
                         android:textColor="@color/highlite"
-                        android:textSize="30sp" />
+                        android:textSize="24sp" />
 
                     <TextView
                         android:id="@+id/tv_time"
@@ -140,16 +139,51 @@
 
         </LinearLayout>
 
-        <Button
-            android:id="@+id/booking"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="-400dp"
-            android:background="@drawable/sh_btn_rad"
-            android:text="Book Ticket"
-            android:textColor="@color/background"
-            android:textSize="24sp"
-            app:backgroundTint="@color/highlite" />
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/img_remove"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_weight="1"
+                app:srcCompat="@drawable/ic_remove_from_cart" />
+
+            <EditText
+                android:id="@+id/tec_count"
+                android:layout_width="90dp"
+                android:layout_height="50dp"
+                android:background="@drawable/sh_text_rad"
+                android:ems="10"
+                android:enabled="false"
+                android:gravity="center"
+                android:inputType="textPersonName"
+                android:padding="0dp"
+                android:text="0"
+                android:textColor="#FFFFFF"
+                android:textSize="18sp" />
+
+            <ImageView
+                android:id="@+id/img_add"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_weight="1"
+                app:srcCompat="@drawable/ic_add_to_cart" />
+
+        </LinearLayout>
+
+        <Button
+            android:id="@+id/book_teck"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            android:background="@drawable/travil_item_rad"
+            android:text="book"
+            android:textColor="@color/background" />
 
     </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
