--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -130,7 +130,7 @@
             android:textColorLink="@color/highlite" />
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:gravity="center"
             android:orientation="horizontal">
@@ -142,6 +142,8 @@
                 android:layout_margin="10dp"
                 android:layout_weight="1"
                 android:background="@drawable/travil_item_rad"
+                android:gravity="center"
+                android:padding="5dp"
                 android:text="Hestory"
                 android:textColor="@color/background" />
 
